--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <body style="margin: 0; padding: 0;">
-        <header style="background-color: #FF0000; height: 70px; width: 100%;">
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB Clone</title>
+	</head>
+	<body style="margin: 0; padding: 0;">
+		<header style="background-color: #FF0000; height: 70px; width: 100%;">
+		</header>
 
-        </header>
-        <footer style="background-color: #00FF00; height: 60px; width: 100%;">
-            <p style="text-align: center; ">Best School</p>
-        </footer>
-    </body>
+		<footer style="background-color: #00FF00; height: 60px; width: 100%">
+			<p style="position: absolute; text-align: center;">Best School</p>
+		</footer>
+	</body>
 </html>
-
-Hola mundo
