--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -9,7 +9,7 @@
 		</header>
 
 		<footer style="background-color: #00FF00; height: 60px; width: 100%">
-			<p style="position: absolute; text-align: center;">Best School</p>
+			<p style="position: absolute; bottom: 0; text-align: center;">Best School</p>
 		</footer>
 	</body>
 </html>
