--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,8 +8,8 @@
 		<header style="background-color: #FF0000; height: 70px; width: 100%;">
 		</header>
 
-		<footer style="background-color: #00FF00; height: 60px; width: 100%">
-			<p style="position: absolute; bottom: 0; text-align: center;">Best School</p>
+		<footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center;">
+			<p>Best School</p>
 		</footer>
 	</body>
 </html>
