--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -20,9 +20,9 @@
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
-					<h4>Fitness facility, pools, internet..</h4>
+					<h4>Fitness facility, Pools, Internet..</h4>
 				</div>
-				<button>Search<button>
+				<button>Search</button>
 			</section>
 		</div>
 
