--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -52,23 +52,34 @@
 					<h2>My home</h2>
 					<div class="price_by_night">$80</div>
 					<div class="information">
-						<div class="max_guest">2 guest</div>
-						<div class="number_rooms">1 bedroom</div>
-						<div class="number_bathrooms">1 bathroom</div>
+						<div class="max_guest">2 Guests</div>
+						<div class="number_rooms">1 Bedroom</div>
+						<div class="number_bathrooms">1 Bathroom</div>
 					</div>
-					<div class="user"><strong>Owner:</strong>Donald Duck</div>
+					<div class="user"><strong>Owner:</strong> Donald Duck</div>
 					<div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It is located at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, and 3 stops to Jingan Temple.</div>
 				</article>
 				<article>
 					<h2>Tiny house</h2>
-					<div class="price_by_night">$50</div>
+					<div class="price_by_night">$65</div>
 					<div class="information">
-						<div class="max_guest">1 guest</div>
-						<div class="number_rooms">1 bedroom</div>
-						<div class="number_bathrooms">1 bathroom</div>
+						<div class="max_guest">4 Guests</div>
+						<div class="number_rooms">2 Bedrooms</div>
+						<div class="number_bathrooms">1 Bathroom</div>
 					</div>
-					<div class="user"><strong>Owner:</strong>Bugs Bunny</div>
+					<div class="user"><strong>Owner:</strong> Bugs Bunny</div>
 					<div class="description">Our place is a private, affordable stand-alone guest house centrally located just minutes to French Quarters, downtown, the Fair Grounds(Jazz Fest) and City Park. The guest house is a quaint, 400 square ft. with a full bath, mini kitchen, &living room. The extra high ceilings make the home feel more spacious. The sofa converts to a bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.</div>
+				</article>
+				<article>
+					<h2>A suite</h2>
+					<div class="price_by_night">$190</div>
+					<div class="information">
+						<div class="max_guest">2 Guests</div>
+						<div class="number_rooms">2 Bedrooms</div>
+						<div class="number_bathrooms">1 Bathroom</div>
+					</div>
+					<div class="user"><strong>Owner:</strong> Ezequiel Silva</div>
+					<div class="description">Best suit you will ever see</div>
 				</article>
 			</section>
 		</div>
